refactor(provider): unify provider naming
